fixing icons alignments

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -93,7 +93,7 @@ li.nav-text {
 }
 
 .gap {
-    height: 50px;
+    height: 40px;
 }
 
 .menu-close svg{
